--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:background="@color/bg2"
-    >
-    <include layout="@layout/navbar" android:id="@+id/navbar"/>
+    tools:context=".MainActivity">
+
+    <include
+        android:id="@+id/navbar"
+        layout="@layout/navbar" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
@@ -25,8 +27,8 @@
             android:id="@+id/inp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Masukkan Link"
-            android:background="@color/white"/>
+            android:background="@color/white"
+            android:hint="Masukkan Link" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -37,6 +39,7 @@
         android:layout_marginTop="19dp"
         android:layout_marginEnd="32dp"
         android:text="Generate"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
@@ -57,74 +60,41 @@
         app:layout_constraintTop_toTopOf="@+id/navbar"
         tools:srcCompat="@android:color/transparent" />
 
-    <RelativeLayout
-        android:id="@+id/colorPicker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="210dp"
+        android:layout_height="48dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="25dp"
+        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button">
-
-        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/radio_group"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/buttonBlack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:text="Default" />
-
-            <RadioButton
-                android:id="@+id/buttonRed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/buttonBlack"
-                android:text="Red" />
-
-            <RadioButton
-                android:id="@+id/buttonYellow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/buttonRed"
-                android:text="Yellow" />
-
-            <RadioButton
-                android:id="@+id/buttonGreen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/buttonYellow"
-                android:text="Green" />
-        </RadioGroup>
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/colorPicker"
-        app:layout_constraintStart_toStartOf="parent"
-        android:inputType="textMultiLine"
-        android:visibility="gone"
-        android:textColor="@color/black"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/buttonSave"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="32dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="93dp"
         android:text="Save"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/desc"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="92dp"
+        android:text="Reset"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.255"
+        app:layout_constraintStart_toEndOf="@+id/buttonSave"
+        app:layout_constraintTop_toBottomOf="@+id/img" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
